<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dutt Bavani</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>

    <string name="select_from_below">Select From Below</string>
    <string name="created_by">Created By: Viral Thakker</string>
    <string name="jalaram_bapa">Jalaram Bapa</string>
    <string name="jalaram_info">Jalaram Bapa (Gujarati: જલારામ બાપા) popularly known as Bapa (Gujarati: બાપા) (14 November 1799 – 23 February 1881) was a Hindu saint from Gujarat, India. He was born on 14 November 1799,one week after the Hindu festival of Diwali.</string>
    <string name="wifi">available on wifi</string>
    <string name="banner_ad_unit_id">ca-app-pub-4869448739125810/4995886685</string>

    <string name="more_apps">More Apps</string>
    <string name="ratings">Ratings</string>
    <string name="parichay">About</string>
    <string name="play_songs">Play Songs</string>

    <string name="desgined_by">Design and Created by</string>
    <string name="creator">+919898071213</string>
    <string name="lets_share">Let\'s Share</string>

    <string name="insdie_ad">ca-app-pub-4990243882809131/6090487208</string>
    <string name="fullad">ca-app-pub-4869448739125810/3398389083</string>
    <string name="site">www.piyushranafilms.com</string>
    <string name="share_text">એપ્લિકેશન પસંદ આવી હોય તો શેર કરો</string>
    <string name="share_message" formatted="false">*%s* સાંભળવા માટે ડાઊનલોડ કરો https://play.google.com/store/apps/details?id=%s</string>
    <string name="rate_us">Rate US</string>

</resources>
