<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/playback_controls_padding">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_gravity="center_horizontal"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="@dimen/playback_controls_albumart_size"
            android:layout_height="@dimen/playback_controls_albumart_size"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_albumart"
            android:contentDescription="@string/currently_playing_song"
            android:scaleType="centerCrop"
            tools:src="@drawable/app_icon" />


        <ImageButton
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/play_pause"
            android:padding="8dp"
            android:src="@drawable/ic_play_arrow_black_36dp"
            android:tint="@color/bt_accent"
            android:tintMode="src_in" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/playback_controls_albumart_horizontal_margin"
            android:layout_toEndOf="@id/album_art"
            android:layout_toStartOf="@+id/play_pause"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/currently_playing_song"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="The Best Music EVAH1111 THE BEST" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/currently_playing_artist"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:text="John Doe and Band" />

            <TextView
                android:id="@+id/extra_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/currently_playing_extra_info"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone"
                tools:text="casting to MyCast" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
