<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/splash_baselayout"
    tools:context="com.example.android.uamp.ui.SplashActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_splash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <LinearLayout
        android:id="@+id/splash_layoutplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0.33"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/bg_icon"
            android:padding="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/ic_songlist" />

        <TextView
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/play_songs" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/splash_layoutmore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/bg_icon"
                android:padding="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:srcCompat="@drawable/more_apps" />

            <TextView
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:text="@string/more_apps" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/splash_layoutabout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/bg_icon"
                android:padding="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:srcCompat="@drawable/ic_about" />

            <TextView
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/parichay" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/splash_layoutratings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/bg_icon"
                android:padding="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:srcCompat="@drawable/ic_ratings" />

            <TextView
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ratings" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
